--- a/VocabularyFlashcardsIphone/Base.lproj/Main.storyboard
+++ b/VocabularyFlashcardsIphone/Base.lproj/Main.storyboard
@@ -68,5 +68,32 @@
             </objects>
             <point key="canvasLocation" x="612" y="142.57871064467767"/>
         </scene>
+        <!--Flashcard View Controller-->
+        <scene sceneID="KlK-BF-q9N">
+            <objects>
+                <viewController storyboardIdentifier="flashcardView" id="bHk-vJ-TWY" customClass="FlashcardViewController" customModule="VocabularyFlashcardsIphone" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gwr-J6-B6Z"/>
+                        <viewControllerLayoutGuide type="bottom" id="iBK-Gd-Dw9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0xe-JK-VbV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="FLASHCARDS TIME!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dvL-Fw-NM3">
+                                <frame key="frameInset" minX="109" minY="107" width="157" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ynS-u2-BVg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1367.2" y="147.97601199400302"/>
+        </scene>
     </scenes>
 </document>
